--- a/google-benchmark/CMakeLists.txt
+++ b/google-benchmark/CMakeLists.txt
@@ -5,11 +5,17 @@ find_package(benchmark REQUIRED)
 find_package(cppzmq REQUIRED)
 find_package(g3log CONFIG REQUIRED)
 
-add_executable(zmq zmq.cpp)
-add_executable(logging logging.cpp)
 add_compile_options(-O3)
+include_directories(${CMAKE_INCLUDE_PATH})
 
+
+add_executable(zmq zmq.cpp)
 target_link_libraries(zmq PRIVATE benchmark::benchmark cppzmq)
-target_link_libraries(logging PRIVATE benchmark::benchmark)
-target_link_libraries(logging PRIVATE g3log)
-target_compile_features(logging PRIVATE cxx_std_17)
+
+add_executable(g3log-logging g3log-logging.cpp)
+target_link_libraries(g3log-logging PRIVATE benchmark::benchmark g3log)
+target_compile_features(g3log-logging PRIVATE cxx_std_17)
+
+add_executable(liblogger liblogger.cpp)
+target_link_libraries(liblogger PRIVATE benchmark::benchmark g3log logger)
+target_compile_features(liblogger PRIVATE cxx_std_17)
